fix: header bleed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -969,6 +969,10 @@ body.home main {
     overflow: auto;
   }
 
+  body.home .site-header {
+    background-color: var(--header-bg);
+  }
+
   .landing {
     text-align: left;
     flex-direction: column;
